* FIXED: Type-error in manual tools: man_button_fragment ->initialise:
  Argument 4 (object): `object' expected.

* FIXED: Honour colour of `text_item<-value_text'.

* FIXED: Added *-> to meta-predicates for PceEmacs cross-referencer.

* FIXED: Win32: `box->fill_offset' for boxes displayed on sub-devices.

* PORT: Better diagnosis for libXpm and libjpeg and their headers in
  configure, helping users to fix incomplete or broken installation
  environment.

* ENHANCED: Error recovery sending messages to broken objects.

* FIXED: X11 version: problem when freeing colour objects in use by the
  graphical engine.

* ENHANCED: library(find_file), class file_item not to show . and ..

* FIXED: Crash, notably related to keyboard events destryoing the window
  on which the event happened.  Reported by Lyosha.

* PORT: Fixed vsscanf portability problems in src/ker/goodies.c.  Thanks to
  Gertjan van Noord.

VERSION 5.1.2
=============

* ADDED: library(gradient) defining class gradient for making gradient
  fill-patterns.

* MODIFIED: Images are only turned read-only if a named image is created
  from a data object.

* ADDED: Handling of HSV colour model.  See `colour->initialise'.

* FIXED: Allow .bm (old X11 bitmaps) the contain CRLF rather than plain
  LF for correct loading on Windows/Unix corrupted files.

* FIXED: Include dialog/bitmaps files in the Windows distribution.

* MODIFIED: PceEmacs user-init file changes from ~/.pceemacsrc to
  user_profile('pceemacs.ini') on Windows.

* FIXED: Modal window handling, especially for transient windows.  A transient
  modal window is now by defailt placed on the top-left of the parent window.

* FIXED: Maintain and handle directory in Windows file-finder (bug introduced
  while starting to use the standard GetOpenFilename()).

* ADDED: PceEmacs: Added the (fairly experimental) HTML, SGML and XML modes
  to the standard library.

* FIXED: Make GUI-tracer use library(prolog_predicate_item), avoiding